2005-05-16  Anthony Kozar  <anthonykozar@sbcglobal.net>

	* Top/argdecode.c:
	* Top/csound.c:
	* Top/main.c:
	* Engine/filopen.c:
	* Engine/insert.c:
	* Engine/linevent.c:
	* Engine/musmon.c:  Converted mills_macintosh to mac_classic or MAC as
	  appropriate or removed code if dependent on Mills globals.
	
2005-05-15  Anthony Kozar  <anthonykozar@sbcglobal.net>

	* Top/getstring.c: #include "cs.h", not <cs.h>
	* Top/threads.c: Added stubs for csound*ThreadLock functions.
	* Engine/envvar.c: Fixes for MacOS pathnames (more may be needed).

2005-05-15  John ffitch  <jpff@codemist.co.uk>

	* Top/main.c: Prototype for mytmpnam

2005-05-14  John ffitch  <jpff@codemist.co.uk>

	* Top/argdecode.c (decode_long): Allow definition of macros

	* Engine/sread.c (init_smacros): 
	* Engine/rdorch.c (init_omacros): New functions to define macros
	
2005-05-11  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/ugmoss.c (valpass): Added cache of p->maxlpt to avoid
	overwriting arguments

2005-05-08  Michael Gogins <gogins@pipeline.com>
	* Added examples/Orbifold.py, an interactive display of the
	3-dimensional orbifold of all close voice-leadings between
	3-tone chords (based on the work of Professor Dmitri Tymoczko
	of Princeton). Also demonstrates controlling Csound from Python
	for real-time performance, and the use of 3-dimensional graphics
	for constructing graphical user interfaces.

2005-05-07	Istvan Varga	<istvan@csounds.com>
	* Opcodes/biquad.c:
	* Opcodes/biquad.h:
	  added new optional argument to distort1 opcode (defaults to zero),
	  to select amplitude scaling mode (0: default, compatible with
	  original version; 1: relative to 0dBFS, same as mode 0 if 0dbfs is
	  32768; 2: unscaled)
	  code changes to improve performance of some opcodes: biquad, vco,
	  pareq, and distort1
	  improved vco opcode for more accurate output
	* Engine/rdorch.c:
	* OOps/aops.c:
	  '=.a' opcode is automatically replaced with 'upsamp' if input is